--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "format:prettier": "yarn prettier --write ."
   },
   "dependencies": {
     "next": "latest",
@@ -11,8 +13,13 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.37",
     "autoprefixer": "^10.2.6",
+    "eslint": "8.4.0",
+    "eslint-config-next": "12.0.7",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "prettier": "2.5.1",
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.5.2"
   }
 }
