--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.1.1",
+    "axios": "^0.24.0",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sharp": "^0.29.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
