--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "format:prettier": "yarn prettier --write ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.0",
     "@svgr/webpack": "^6.1.1",
     "axios": "^0.24.0",
+    "bnc-onboard": "^1.36.0",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "sharp": "^0.29.3",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
