--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.0",
     "@svgr/webpack": "^6.1.1",
+    "@umijs/hooks": "^1.9.3",
     "axios": "^0.24.0",
     "bnc-onboard": "^1.36.0",
     "formik": "^2.2.9",
@@ -21,7 +22,9 @@
     "redux": "^4.1.2",
     "sharp": "^0.29.3",
     "styled-components": "^5.3.3",
-    "web3": "^1.6.1"
+    "umi-request": "^1.4.0",
+    "web3": "^1.6.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
