--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "prettier": "2.5.1",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.5.2"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
