--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format:prettier": "yarn prettier --write ."
+    "format:prettier": "yarn prettier --write src/*",
+    "precommit": "yarn run format:prettier && yarn run lint"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
