--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "^10.2.6",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
+    "husky": "^7.0.4",
     "postcss": "^8.3.5",
     "prettier": "2.5.1",
     "tailwindcss": "^2.2.4",
