--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,13 @@
 {
-  "extends": "next/core-web-vitals",
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
     "react/display-name": 0,
     "jsx-a11y/alt-text": 0
