--- a/package.json
+++ b/package.json
@@ -32,14 +32,16 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "autoprefixer": "^10.2.6",
-    "eslint": "8.4.0",
+    "eslint": "^8.10.0",
     "eslint-config-next": "12.0.7",
     "husky": "^7.0.4",
     "postcss": "^8.3.5",
     "prettier": "2.5.1",
     "tailwindcss": "^2.2.4",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.5"
   },
   "packageManager": "yarn@3.1.1"
 }
